--- a/web/src/styles/globals.css
+++ b/web/src/styles/globals.css
@@ -6,7 +6,8 @@
 }
 
 body {
-    color: #e1e1e6;
-    background: #121214;
-    
+  color: #e1e1e6;
+  background: #121214;
+  display: grid;
+  justify-content: center;
 }
